css/parser/tests/hex_colors.out
css/parser/tests/hex_colors.css:3:12: error: expecting a hex color
    1 | 
    2 | .dim {
    3 |     color: #;
      |            ^
    4 |     color: #abcdef;
    5 |     color: #123456;
css/parser/tests/hex_colors.css:6:12: error: invalid hex color
    4 |     color: #abcdef;
    5 |     color: #123456;
    6 |     color: #7890j0;
      |            ~~~~~~~
    7 |     color: #zzxxzz;
    8 | }
css/parser/tests/hex_colors.css:7:12: error: invalid hex color
    5 |     color: #123456;
    6 |     color: #7890j0;
    7 |     color: #zzxxzz;
      |            ~~~~~~~
    8 | }